--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,79 @@
+/* FONTS */
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Bold.woff2") format("woff2"),
+      url("../fonts/Montserrat-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Regular.woff2") format("woff2"),
+      url("../fonts/Montserrat-Regular.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Medium.woff2") format("woff2"),
+      url("../fonts/Montserrat-Medium.woff") format("woff");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-ExtraBold.woff2") format("woff2"),
+      url("../fonts/Montserrat-ExtraBold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Light.woff2") format("woff2"),
+      url("../fonts/Montserrat-Light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-SemiBold.woff2") format("woff2"),
+      url("../fonts/Montserrat-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Montserrat";
+  src: url("../fonts/Montserrat-Black.woff2") format("woff2"),
+      url("../fonts/Montserrat-Black.woff") format("woff");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+/* CUSTOM-PROPS */
+:root {
+  --light-purple: #7D3C98;
+  --blue: #0A4ECB;
+  --dark-blue: #04358F;
+  --yellow: #FFC62F;
+  --brand-color: hsl(337, 94%, 86%);
+  --text-color: #b1bde9;
+  --text-grey: #6E7284;
+
+}
 /* GLOBAL */
 html{
   height: 100%;
@@ -17,11 +93,12 @@ body{
   height: 100%;
   padding: 0;
   margin: 0;
-  font-family: "Arial",sans-serif;
-  font-size: 16px;
-  line-height: 1.5;
+  font-family: "Montserrat", "Arial",sans-serif;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 24px;
   background-color: #fff;
-  color: black;
+  color: var(--text-color);
 }
 
 img{
@@ -32,12 +109,200 @@ img{
 .container{
   width: 100%;
   max-width: 1200px;
-  padding-left: 50px;
-  padding-right: 50px;
+  padding-left: 10px;
+  padding-right: 10px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .main-content{
   flex-grow: 1;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-top {
+  padding-top: 8px;
+  padding-bottom: 8px;
+  background-color: #fff;
+}
+
+.header-top-container{
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+.top-text{
+  margin-top: 0;
+  margin-bottom: 0;
+  font-weight: 300;
+  font-size: 15px;
+  line-height: 1;
+  color: var(--brand-color);
+}
+
+.header-btn {
+  display: block;
+  padding: 5px;
+  border: 1px solid #DEDFE7;
+  border-radius: 8px;
+}
+
+.btn-span{
+  display: block;
+  width: 20px;
+  height: 20px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+
+}
+
+.header-btn:hover{
+  border-color: var(--brand-color);
+}
+
+.header-btn:active{
+  opacity: 0.6;
+}
+
+.header-btn:not(:last-child){
+  margin-right: 10px;
+}
+.search-span {
+  background-image: url("../img/search.png");
+
+}
+
+.account-span {
+  background-image: url("../img/profile.png");
+}
+
+.cart-span {
+  background-image: url("../img/cart.png");
+}
+
+.logo-link {
+display: block;
+cursor: pointer;
+}
+
+.header-logo__link {
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.logo-link:hover{
+opacity: 0.8;
+}
+
+.logo-link:active{
+opacity: 0.6;
+}
+
+.logo-img {
+  display: block;
+  flex-shrink: 0;
+  object-fit: cover;
+  width: 188px;
+  height: 82px;
+}
+
+.sitenav {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  background-color: var(--brand-color);
+  color: var(--yellow);
+}
+
+.sitenav__list {
+  margin: 0;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style: none;
+  text-transform: uppercase;
+}
+
+.sitenav__item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.sitenav__link {
+  color: #fff;
+  text-decoration: none;
+}
+
+.sitenav__link:hover{
+  color: var(--yellow);
+}
+
+.sitenav__link:active{
+  opacity: 0.6;
+}
+
+
+/* HERO */
+.hero {
+  position: relative;
+  padding-top: 600px;
+  padding-bottom: 600px;
+  background-image: url("../img/hero-bg.jpg");
+  background-size: cover;
+  background-position: top center;
+  background-repeat:  no-repeat;
+}
+
+.hero-container {
+
+}
+
+.hero-text {
+  margin: 0;
+  margin-bottom: 40px;
+  font-size: 40px;
+  line-height: 1;
+  font-weight: 700;
+  color: #fff;
+
+}
+
+.button {
+display: inline-block;
+padding: 10px 60px;
+text-decoration: none;
+text-transform: uppercase;
+background-color: var(--brand-color);
+color: #fff;
+}
+
+.button:hover{
+  opacity: 0.8;
+}
+
+.button:active{
+  opacity: 0.6;
+}
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+  .search {
+    background-image: url("../img/search@2x.png");
+
+  }
+
+  .cart {
+    background-image: url("../img/cart@2x.png");
+  }
 }
